some changes in project

--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -158,7 +158,7 @@
               <h3>Project information</h3>
               <ul>
                 <li><strong>Category</strong>: Web Developer</li>
-                <li><strong>Client</strong>: TCS</li>
+                <li><strong>Client</strong>: Self</li>
                 <li><strong>Project date</strong>: 05 May, 2025</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
